# groundline-ai

./: .gitignore  README.md  docker-compose.yml  groundline.example.toml  pyproject.toml
docs/: app-artifacts.md  techdoc.md
examples/developer-support/: README.md  evalset.jsonl
examples/developer-support/docs/: webhooks.md
examples/quickstart/: evalset.example.jsonl
examples/quickstart/docs/: finance_policy.md
groundline/: __init__.py
groundline/adapters/: http_json.py
groundline/adapters/embedding/: __init__.py  base.py  deterministic.py  factory.py  http_api.py  sentence_transformers.py
groundline/adapters/llm/: base.py  factory.py  http_api.py
groundline/adapters/metadata/: __init__.py  sqlite_store.py
groundline/app/: main.py
groundline/cli/: main.py
groundline/core/: __init__.py  app_recipe.py  config.py  demo.py  engine.py  errors.py  hashing.py  pipeline.py  provider_config.py  schemas.py
groundline/evals/: dataset.py  metrics.py  runner.py
groundline/ingestion/: chunker.py  loader.py  markdown_renderer.py  parser.py
groundline/retrieval/: __init__.py  context_builder.py  fusion.py  prompt_builder.py  tokenize.py  trace.py
groundline/storage/: __init__.py  metadata_store.py  object_store.py  search_store.py  vector_store.py
tests/integration/: test_api.py  test_qdrant.py
tests/unit/: test_app_recipe.py  test_cli_demo.py  test_embedding_factory.py  test_engine.py  test_eval.py  test_http_providers.py  test_parser_chunker.py  test_provider_config.py  test_rerank_factory.py  test_retrieval.py  test_schemas.py
(+25 files in other folders)
